deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: universo-gpt
  namespace: universo-gpt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: universo-gpt
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 100%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: universo-gpt
    spec:
      containers:
      - env:
        - name: LLM_TEMPERATURE
          value: "0.5"
        image: registry.lab.int/sarta/universo-gpt:12
        imagePullPolicy: IfNotPresent
        name: universo-gpt
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            nvidia.com/gpu: "1"
        volumeMounts:
        - mountPath: /app/models
          name: model-volume
      tolerations:
      - effect: NoSchedule
        key: nvidia.com/gpu
        operator: Equal
        value: "true"
      volumes:
      - name: model-volume
        nfs:
          path: /mnt/pool-ssd/LLM
          server: 172.16.0.2
---
apiVersion: v1
kind: Service
metadata:
  name: universo-gpt
  namespace: universo-gpt
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: universo-gpt
  type: ClusterIP
