deploy/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: sarta-gpt
  namespace: sarta-gpt
spec:
  ingressClassName: nginx
  rules:
  - host: universo-gpt.lab.int
    http:
      paths:
      - backend:
          service:
            name: universo-gpt
            port:
              number: 5000
        path: /
        pathType: Prefix
